[gd_scene load_steps=15 format=2]

[ext_resource path="res://elementos/UI/minigame_senhorinha/Menu/Botao_voltar/voltar_feed/Normal.png" type="Texture" id=1]
[ext_resource path="res://elementos/UI/minigame_senhorinha/Menu/Botao_voltar/voltar_feed/Pressed.png" type="Texture" id=2]
[ext_resource path="res://elementos/UI/minigame_senhorinha/Menu/Botao_voltar/voltar_feed/Hovered.png" type="Texture" id=3]
[ext_resource path="res://elementos/fontes/Lacquer-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://elementos/UI/botao_voltar_a_tela_inicial_pressed.png" type="Texture" id=5]
[ext_resource path="res://recursos/Menu_principal/menu_opcoes/MenuOpcoes.gd" type="Script" id=6]
[ext_resource path="res://recursos/Menu_principal/menu_opcoes/TemaSeletorDeLevel.tres" type="Theme" id=7]
[ext_resource path="res://elementos/UI/botao_voltar_ao_jogo_hover.png" type="Texture" id=8]
[ext_resource path="res://elementos/UI/botao_voltar_a_tela_inicial_hover.png" type="Texture" id=9]
[ext_resource path="res://elementos/UI/card_opcoes.png" type="Texture" id=10]
[ext_resource path="res://elementos/UI/botao_voltar_a_tela_inicial_default.png" type="Texture" id=11]
[ext_resource path="res://elementos/UI/botao_voltar_ao_jogo_default.png" type="Texture" id=12]
[ext_resource path="res://elementos/UI/botao_voltar_ao_jogo_pressed.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[node name="MenuDeOpcoes" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 6 )

[node name="MenuDeOpcoes" type="Control" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -472.0
margin_top = -806.0
margin_right = 248.0
margin_bottom = 474.0
rect_scale = Vector2( 1.31255, 1.31255 )

[node name="Transparencia" type="ColorRect" parent="MenuDeOpcoes"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1884.0
margin_top = -1002.0
margin_right = 1851.0
margin_bottom = 1221.0
color = Color( 0.0862745, 0.0862745, 0.0862745, 0.301961 )

[node name="Menu" type="TextureRect" parent="MenuDeOpcoes"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -223.0
margin_right = 260.0
margin_bottom = 223.0
mouse_filter = 0
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="VolumeEfeitos" type="HSlider" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.66
anchor_top = 0.361
anchor_right = 0.66
anchor_bottom = 0.361
margin_left = -116.2
margin_top = -18.006
margin_right = 270.8
margin_bottom = 41.994
rect_scale = Vector2( 0.599953, 0.599953 )
theme = ExtResource( 7 )
scrollable = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VolumeMusica" type="HSlider" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.661
anchor_top = 0.199
anchor_right = 0.661
anchor_bottom = 0.199
margin_left = -115.72
margin_top = -17.754
margin_right = 274.28
margin_bottom = 42.246
rect_scale = Vector2( 0.594453, 0.594453 )
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VoltarMenu" type="TextureButton" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.512
anchor_top = 0.892
anchor_right = 0.512
anchor_bottom = 0.892
margin_left = -113.24
margin_top = -23.832
margin_right = 113.76
margin_bottom = 24.168
rect_pivot_offset = Vector2( 114, 24 )
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="MenuDeOpcoes/Menu/VoltarMenu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.5001
margin_top = -19.5001
margin_right = 93.4999
margin_bottom = 14.4999
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "voltar ao menu"
align = 1
valign = 1

[node name="VoltarJogo" type="TextureButton" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.515
anchor_top = 0.771
anchor_right = 0.515
anchor_bottom = 0.771
margin_left = -117.8
margin_top = -24.866
margin_right = 118.2
margin_bottom = 25.134
rect_pivot_offset = Vector2( 118, 25 )
toggle_mode = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="MenuDeOpcoes/Menu/VoltarJogo"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.5001
margin_top = -19.5001
margin_right = 93.4999
margin_bottom = 14.4999
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "voltar ao jogo"
align = 1
valign = 1

[node name="ReiniciarCutscene" type="TextureButton" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.303846
anchor_top = 0.598655
anchor_right = 0.786538
anchor_bottom = 0.717489
margin_left = -16.0
margin_top = 0.999969
margin_right = -16.0
margin_bottom = 0.999969
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="MenuDeOpcoes/Menu/ReiniciarCutscene"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.5001
margin_top = -19.5001
margin_right = 93.4999
margin_bottom = 14.4999
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "reiniciar abertura"
align = 1
valign = 1

[node name="Titulo" type="Label" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.0711538
anchor_top = 0.154709
anchor_right = 0.436538
anchor_bottom = 0.230942
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "volume m√∫sica"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Porcentagem" type="Label" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.755769
anchor_top = 0.112108
anchor_right = 0.940385
anchor_bottom = 0.199552
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0%"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Titulo2" type="Label" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.0865385
anchor_top = 0.318386
anchor_right = 0.451923
anchor_bottom = 0.39462
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "volume efeitos"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Porcentagem2" type="Label" parent="MenuDeOpcoes/Menu"]
anchor_left = 0.761538
anchor_top = 0.2713
anchor_right = 0.946154
anchor_bottom = 0.381166
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0%"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="button_up" from="MenuDeOpcoes/Menu/VoltarMenu" to="." method="_on_VoltarMenu_button_up"]
[connection signal="button_up" from="MenuDeOpcoes/Menu/VoltarJogo" to="." method="_on_VoltarJogo_button_up"]
[connection signal="button_up" from="MenuDeOpcoes/Menu/ReiniciarCutscene" to="." method="_on_ReiniciarCutscene_button_up"]
